fixed viewport issues on mobile

--- a/03_Front-End-Development-Libraries/01_Random-Quote-Machine/src/index.css
+++ b/03_Front-End-Development-Libraries/01_Random-Quote-Machine/src/index.css
@@ -147,3 +147,15 @@ html {
 }
 
 /* Buttons */
+
+@media all and (max-width: 500px) {
+  .card {
+    transform: scale(0.8);
+  }
+}
+
+@media all and (max-height: 420px) {
+  .card {
+    transform: scale(0.6);
+  }
+}
